Minor edits to Mamba-2 blogs

--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -595,7 +595,7 @@ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 }
 
 @inproceedings{zheng2022linear,
-  title={Linear complexity randomized self-attention mechanism},
+  title={Linear Complexity Randomized Self-Attention Mechanism},
   author={Zheng, Lin and Wang, Chong and Kong, Lingpeng},
   booktitle={International Conference on Machine Learning},
   pages={27011--27041},
@@ -611,7 +611,7 @@ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 }
 
 @article{sun2023retentive,
-  title={Retentive network: A successor to transformer for large language models},
+  title={Retentive Network: A Successor to Transformer for Large Language Models},
   author={Sun, Yutao and Dong, Li and Huang, Shaohan and Ma, Shuming and Xia, Yuqing and Xue, Jilong and Wang, Jianyong and Wei, Furu},
   journal={arXiv preprint arXiv:2307.08621},
   year={2023}
@@ -742,7 +742,7 @@ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 }
 
 @inproceedings{dao2022monarch,
-  title={Monarch: Expressive structured matrices for efficient and accurate training},
+  title={Monarch: Expressive Structured Matrices for Efficient and Accurate Training},
   author={Dao, Tri and Chen, Beidi and Sohoni, Nimit S and Desai, Arjun and Poli, Michael and Grogan, Jessica and Liu, Alexander and Rao, Aniruddh and Rudra, Atri and R{\'e}, Christopher},
   booktitle={International Conference on Machine Learning},
   pages={4690--4721},
@@ -751,7 +751,7 @@ booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
 }
 
 @article{fu2024monarch,
-  title={Monarch mixer: A simple sub-quadratic gemm-based architecture},
+  title={Monarch Mixer: A Simple Sub-quadratic GEMM-based Architecture},
   author={Fu, Dan and Arora, Simran and Grogan, Jessica and Johnson, Isys and Eyuboglu, Evan Sabri and Thomas, Armin and Spector, Benjamin and Poli, Michael and Rudra, Atri and R{\'e}, Christopher},
   journal={Advances in Neural Information Processing Systems},
   volume={36},
@@ -1224,7 +1224,7 @@ institution = "University of California, Irvine, School of Information and Compu
 }
 
 @article{lee2021fnet,
-  title={Fnet: Mixing tokens with fourier transforms},
+  title={FNet: Mixing Tokens with Fourier Transforms},
   author={Lee-Thorp, James and Ainslie, Joshua and Eckstein, Ilya and Ontanon, Santiago},
   journal={arXiv preprint arXiv:2105.03824},
   year={2021}
@@ -1407,7 +1407,7 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 }
 
 @article{pernet2018time,
-  title={Time and space efficient generators for quasiseparable matrices},
+  title={Time and Space Efficient Generators for Quasiseparable Matrices},
   author={Pernet, Cl{\'e}ment and Storjohann, Arne},
   journal={Journal of Symbolic Computation},
   volume={85},
@@ -1417,7 +1417,7 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 }
 
 @article{pernet2023exact,
-  title={Exact computations with quasiseparable matrices},
+  title={Exact Computations with Quasiseparable Matrices},
   author={Pernet, Cl{\'e}ment and Signargout, Hippolyte and Villard, Gilles},
   journal={arXiv preprint arXiv:2302.04515},
   year={2023}
