--- a/assets/bibliography/ricardo.bib
+++ b/assets/bibliography/ricardo.bib
@@ -694,3 +694,27 @@ url={https://openreview.net/forum?id=u7m2CG84BQ}
   year={2025},
 }
 
+@online{goel2024sonic,
+  author       = {Cartesia AI},
+  title        = {Announcing Sonic: a low‑latency voice model for lifelike speech},
+  year         = {2024},
+  month        = may,
+  day          = {31},
+  date         = {2024-05-31},
+  organization = {Cartesia},
+  url          = {https://cartesia.ai/blog/sonic},
+  note         = {Accessed 2025-06-24}
+}
+
+@online{mistral2024codestral,
+  author       = {{Mistral AI Team}},
+  title        = {Codestral Mamba},
+  year         = {2024},
+  month        = jul,
+  day          = {16},
+  date         = {2024-07-16},
+  organization = {Mistral AI},
+  url          = {https://mistral.ai/news/codestral-mamba},
+  note         = {Accessed: 2025-06-24}
+}
+
