--- a/assets/bibliography/ricardo.bib
+++ b/assets/bibliography/ricardo.bib
@@ -695,7 +695,7 @@ url={https://openreview.net/forum?id=u7m2CG84BQ}
 }
 
 @online{goel2024sonic,
-  author       = {Cartesia AI},
+  author       = {Cartesia},
   title        = {Announcing Sonic: a low‑latency voice model for lifelike speech},
   year         = {2024},
   month        = may,
@@ -707,7 +707,7 @@ url={https://openreview.net/forum?id=u7m2CG84BQ}
 }
 
 @online{mistral2024codestral,
-  author       = {{Mistral AI Team}},
+  author       = {Mistral},
   title        = {Codestral Mamba},
   year         = {2024},
   month        = jul,
