--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -1662,6 +1662,13 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   year={2024}
 }
 
+@article{waleffe2024empirical,
+  title={An Empirical Study of Mamba-based Language Models},
+  author={Waleffe, Roger and Byeon, Wonmin and Riach, Duncan and Norick, Brandon and Korthikanti, Vijay and Dao, Tri and Gu, Albert and Hatamizadeh, Ali and Singh, Sudhakar and Narayanan, Deepak and others},
+  journal={arXiv preprint arXiv:2406.07887},
+  year={2024}
+}
+
 %%% S4 applications and literature
 @inproceedings{mehta2023long,
   IDS={gss},
@@ -2915,6 +2922,14 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
 }
 
 %%% Tokenization
+
+@inproceedings{sennrich2016neural,
+  title={Neural Machine Translation of Rare Words with Subword Units},
+  author={Sennrich, Rico and Haddow, Barry and Birch, Alexandra},
+  booktitle={Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  pages={1715--1725},
+  year={2016}
+}
 
 @inproceedings{schmidt2024tokenization,
   title={Tokenization Is More Than Compression},
