--- a/assets/bibliography/ricardo.bib
+++ b/assets/bibliography/ricardo.bib
@@ -108,7 +108,7 @@ series = {NIPS'17}
 }
 
 @inproceedings{mamba2,
-  title={Transformers are {SSM}s: Generalized Models and Efficient Algorithms Through Structured State Space Duality},
+  title={Transformers are SSMs: Generalized Models and Efficient Algorithms Through Structured State Space Duality},
   author={Dao, Tri and Gu, Albert},
   booktitle={International Conference on Machine Learning (ICML)},
   year={2024}
@@ -321,7 +321,7 @@ url={https://openreview.net/forum?id=Drrl2gcjzl}
 
 @inproceedings{
 beck2024xlstm,
-title={x{LSTM}: Extended Long Short-Term Memory},
+title={xLSTM: Extended Long Short-Term Memory},
 author={Maximilian Beck and Korbinian P{\"o}ppel and Markus Spanring and Andreas Auer and Oleksandra Prudnikova and Michael K Kopp and G{\"u}nter Klambauer and Johannes Brandstetter and Sepp Hochreiter},
 booktitle={The Thirty-eighth Annual Conference on Neural Information Processing Systems},
 year={2024},
@@ -625,7 +625,7 @@ url={https://openreview.net/forum?id=R8sQPpGCv0}
 
 @inproceedings{
 babilong,
-title={{BABIL}ong: Testing the Limits of {LLM}s with Long Context Reasoning-in-a-Haystack},
+title={BABILong: Testing the Limits of LLMs with Long Context Reasoning-in-a-Haystack},
 author={Yuri Kuratov and Aydar Bulatov and Petr Anokhin and Ivan Rodkin and Dmitry Igorevich Sorokin and Artyom Sorokin and Mikhail Burtsev},
 booktitle={The Thirty-eight Conference on Neural Information Processing Systems Datasets and Benchmarks Track},
 year={2024},
