--- a/assets/bibliography/ricardo.bib
+++ b/assets/bibliography/ricardo.bib
@@ -76,7 +76,7 @@
 
 @inproceedings{attention_is_all_you_need,
 author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, \L{}ukasz and Polosukhin, Illia},
-title = {Attention is all you need},
+title = {Attention Is All You Need},
 year = {2017},
 isbn = {9781510860964},
 publisher = {Curran Associates Inc.},
@@ -279,7 +279,7 @@ url={https://openreview.net/forum?id=Drrl2gcjzl}
 }
 
 @inproceedings{LA_katharopoulos2020transformers,
-  title={Transformers are RNNs: Fast autoregressive transformers with linear attention},
+  title={Transformers are RNNs: Fast Autoregressive Transformers with Linear Attention},
   author={Katharopoulos, Angelos and Vyas, Apoorv and Pappas, Nikolaos and Fleuret, Francois},
   booktitle={International Conference on Machine Learning},
   pages={5156--5165},
@@ -526,7 +526,7 @@ url={https://openreview.net/forum?id=Ai8Hw3AXqks}
 }
 
 @misc{longssm-wang2024longssmlengthextensionstatespace,
-      title={LongSSM: On the Length Extension of State-space Models in Language Modelling}, 
+      title={LongSSM: On the Length Extension of State-Space Models in Language Modelling}, 
       author={Shida Wang},
       year={2024},
       eprint={2406.02080},
@@ -696,7 +696,7 @@ url={https://openreview.net/forum?id=u7m2CG84BQ}
 
 @online{goel2024sonic,
   author       = {Cartesia},
-  title        = {Announcing Sonic: a low‑latency voice model for lifelike speech},
+  title        = {Announcing Sonic: a Low‑Latency Voice Model for Lifelike Speech},
   year         = {2024},
   month        = may,
   day          = {31},
