Edit Tradeoffs post

--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -2309,6 +2309,13 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   year={2018}
 }
 
+@article{kaplan2020scaling,
+  title={Scaling Laws for Neural Language Models},
+  author={Kaplan, Jared and McCandlish, Sam and Henighan, Tom and Brown, Tom B and Chess, Benjamin and Child, Rewon and Gray, Scott and Radford, Alec and Wu, Jeffrey and Amodei, Dario},
+  journal={arXiv preprint arXiv:2001.08361},
+  year={2020}
+}
+
 @article{hoffmann2022empirical,
   title={An Empirical Analysis of Compute-Optimal Large Language Model Training},
   author={Hoffmann, Jordan and Borgeaud, Sebastian and Mensch, Arthur and Buchatskaya, Elena and Cai, Trevor and Rutherford, Eliza and de Las Casas, Diego and Hendricks, Lisa Anne and Welbl, Johannes and Clark, Aidan and others},
@@ -2318,6 +2325,12 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   year={2022}
 }
 
+@article{grattafiori2024llama,
+  title={The Llama 3 Herd of Models},
+  author={Grattafiori, Aaron and Dubey, Abhimanyu and Jauhri, Abhinav and Pandey, Abhinav and Kadian, Abhishek and Al-Dahle, Ahmad and Letman, Aiesha and Mathur, Akhil and Schelten, Alan and Vaughan, Alex and others},
+  journal={arXiv preprint arXiv:2407.21783},
+  year={2024}
+}
 
 % Audio
 
@@ -2752,6 +2765,20 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   author={Ren, Liliang and Liu, Yang and Lu, Yadong and Liang, Chen and Chen, Weizhu and others},
   booktitle={The Thirteenth International Conference on Learning Representations (ICLR)},
   year={2025},
+}
+
+@article{blakeman2025nemotron,
+  title={Nemotron-H: A Family of Accurate and Efficient Hybrid Mamba-Transformer Models},
+  author={Blakeman, Aaron and Basant, Aarti and Khattar, Abhinav and Renduchintala, Adithya and Bercovich, Akhiad and Ficek, Aleksander and Bjorlin, Alexis and Taghibakhshi, Ali and Deshmukh, Amala Sanjay and Mahabaleshwarkar, Ameya Sunil and others},
+  journal={arXiv preprint arXiv:2504.03624},
+  year={2025}
+}
+
+@article{liu2025hunyuan,
+  title={Hunyuan-TurboS: Advancing Large Language Models through Mamba-Transformer Synergy and Adaptive Chain-of-Thought},
+  author={Liu, Ao and Zhou, Botong and Xu, Can and Zhou, Chayse and Zhang, ChenChen and Xu, Chengcheng and Wang, Chenhao and Wu, Decheng and Wu, Dengpeng and Jiao, Dian and others},
+  journal={arXiv preprint arXiv:2505.15431},
+  year={2025}
 }
 
 @inproceedings{jelassi2024repeat,
