Edit H-Net posts

--- a/assets/bibliography/albert.bib
+++ b/assets/bibliography/albert.bib
@@ -3107,6 +3107,13 @@ url="https://doi.org/10.1007/978-3-540-71041-7_3"
   year={2025}
 }
 
+@article{pagnoni2024byte,
+  title={Byte Latent Transformer: Patches Scale Better than Tokens},
+  author={Pagnoni, Artidoro and Pasunuru, Ram and Rodriguez, Pedro and Nguyen, John and Muller, Benjamin and Li, Margaret and Zhou, Chunting and Yu, Lili and Weston, Jason and Zettlemoyer, Luke and others},
+  journal={arXiv preprint arXiv:2412.09871},
+  year={2024}
+}
+
 @misc{EvaByte,
     title = {EvaByte: Efficient Byte-level Language Models at Scale},
     url = {https://hkunlp.github.io/blog/2025/evabyte},
