Rename H-Net posts for dates, and finish Past post

--- a/_posts/2025-07-11-hnet-past.md
+++ b/_posts/2025-07-11-hnet-past.md
@@ -4,7 +4,7 @@ title: H-Net - The Past
 description:
 tags:
 giscus_comments: false
-date: 2025-07-05
+date: 2025-07-10
 featured: false
 thumbnail: assets/img/2024-05-31-mamba-2/mamba-2-V3-transparent.png
 
@@ -396,6 +396,8 @@ Why didn't we do those? Well, I guess the main reason is limited compute and mor
 which is where all our resources were invested.
 At no point did it seem worth completely freezing the architecture to run out expensive formal scaling laws, when I think we were able to get an intuitive understanding of their scaling behavior from our proxy protocol;
 and moreover, when it always seems like there are core questions we don't understand and low-hanging improvements to make to the model.
+
+{% include figure.liquid loading="eager" path="assets/img/2025-07-11-hnet/bpb_curve_xl_hnet_white.png" width="50%" caption="On a similar note, I realized we should have just ran this out for much more data to show the gap widening 🤦🏻 <br> We didn't because we only ran things out enough to follow our protocols and provide signal to improving the model." %}
 
 We have a bunch of ideas for where to go from here;
 I'll touch on some of these, and also return to scaling laws, in the [next post](2025-07-11).
